ticketing/infra/k8s/auth-depl.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: auth
  template:
    metadata:
      labels:
        app: auth
    spec:
      containers:
      - name: auth
        image: us.gcr.io/ticketing-dev-413417/auth
        # image: amarjeetkaur111/auth
        # resources:
        #   limits:
        #     memory: "128Mi"
        #     cpu: "500m"
        # ports:
        # - containerPort: 3000


---

  apiVersion: v1
  kind: Service
  metadata:
    name: auth-serv
  spec:
    selector:
      app: auth
    ports:
    - name: auth
      port: 3000
      targetPort: 3000
