ticketing/infra/k8s/ingress-serv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-serv
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
  - host: ticketing.dev
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /api/users/?(.*)
        backend:
          service:
            name: auth-serv
            port: 
              number: 3000
